--- a/empresa.ipynb
+++ b/empresa.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOjVRd6acfvd04pHW7r+2/S",
+      "authorship_tag": "ABX9TyOLckRyg6Q5uEJENuomEoqH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,8 +27,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "presentado por: Carlos nuñez(Carlos.nunes@upb.edu.co)"
+      ],
+      "metadata": {
+        "id": "JjX6rdtdHjCK"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -85,8 +94,8 @@
         "    def __init__(self):\n",
         "        self.id = Employee.new_id\n",
         "        Employee.new_id += 1\n",
-        "        self._name = None  # Atributo para el nombre del empleado\n",
-        "        self.__company = \"Compañia omegle\"  # Atributo privado con nombre de la compañía\n",
+        "        self._name = None\n",
+        "        self.__company = \"Compañia omegle\"\n",
         "\n",
         "    def say_id(self):\n",
         "        print(f\"My id is {self.id}\")\n",
